kubernetes_manifest/uploader_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: wiz-exercise
  name: uploader-deployment
  labels:
    app: uploader
spec:
  replicas: 3
  selector:
    matchLabels:
      app: uploader
  template:
    metadata:
      labels:
        app: uploader
    spec:
      containers:
        - name: file-uploader
          image: lazydev400/file-uploader
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      nodeSelector:
        placement: worker
