kubernetes_manifest/uploader_pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: uploader
spec:
  containers:
  - name: uploader-service 
    image:
