kubernetes_manifest/external_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-external-service
spec:
  ports:
  - name: mongo-connect
    port: 27017
    targetPort: 27017
    protocol: TCP
