kubernetes_manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uploader-service
spec:
  type: LoadBalancer
  selector:
    app: uploader
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
