kubernetes_manifest/uploader_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uploader-ingress
  annotations: 
    nginx.ingress.kubernetes.io.rewrite-target: /
  labels:
    app.kubernetes.io/name: myingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: uploader-service
            port: 
              number: 80
